--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   margin: 0 20px;
   border-radius: 6px;
   overflow: hidden;
+  box-shadow: 0px 0px 40px -15px var(--neutral-color-grayishBlue);
 }
 
 .container header h1 {
@@ -94,6 +95,14 @@ body {
   font-weight: 700;
   font-size: 16px;
   border-radius: 6px;
+  box-shadow: 0px 0px 40px -10px var(--neutral-color-grayishBlue);
+}
+
+.container .price button:hover {
+  background-color: transparent;
+  color: var(--primary-color-brightYellow);
+  cursor: pointer;
+  border: 2px solid var(--primary-color-brightYellow);
 }
 
 .container section .about-us {
